version/0.5/_sources/_autosummary/ansys.api.pyensight.ens_part_clip.ENS_PART_CLIP.rst.txt
ENS\_PART\_CLIP
===============

.. currentmodule:: ansys.api.pyensight.ens_part_clip

.. autoclass:: ENS_PART_CLIP

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      ENS_PART_CLIP.attrgroupinfo
      
      
      ENS_PART_CLIP.attrinfo
      
      
      ENS_PART_CLIP.attrissensitive
      
      
      ENS_PART_CLIP.attrtree
      
      
      ENS_PART_CLIP.cmdlang_rec_info
      
      
      ENS_PART_CLIP.createpart
      
      
      ENS_PART_CLIP.destroy
      
      
      ENS_PART_CLIP.get_values
      
      
      ENS_PART_CLIP.getattr
      
      
      ENS_PART_CLIP.getattrs
      
      
      ENS_PART_CLIP.getmetatag
      
      
      ENS_PART_CLIP.hasmetatag
      
      
      ENS_PART_CLIP.populate_attr_list
      
      
      ENS_PART_CLIP.realtimemode
      
      
      ENS_PART_CLIP.setattr
      
      
      ENS_PART_CLIP.setattr_begin
      
      
      ENS_PART_CLIP.setattr_end
      
      
      ENS_PART_CLIP.setattr_status
      
      
      ENS_PART_CLIP.setattrs
      
      
      ENS_PART_CLIP.setmetatag
      
      
      ENS_PART_CLIP.tracepaths
      
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      ENS_PART_CLIP.ACTIVE
      ENS_PART_CLIP.ADJCOORDSCALEFACTOR
      ENS_PART_CLIP.ADJCOORDTRANSVEC
      ENS_PART_CLIP.ADJCOORDVARSCALEFACTOR
      ENS_PART_CLIP.ADJCOORDXVARIABLE
      ENS_PART_CLIP.ADJCOORDYVARIABLE
      ENS_PART_CLIP.ADJCOORDZVARIABLE
      ENS_PART_CLIP.ALPHABY
      ENS_PART_CLIP.ALPHABYPALETTE
      ENS_PART_CLIP.ANGLE
      ENS_PART_CLIP.AXIS
      ENS_PART_CLIP.BOUNDINGREP
      ENS_PART_CLIP.BOXAXISX
      ENS_PART_CLIP.BOXAXISY
      ENS_PART_CLIP.BOXAXISZ
      ENS_PART_CLIP.BOXLENGTH
      ENS_PART_CLIP.BOXORIGIN
      ENS_PART_CLIP.CASENUMBER
      ENS_PART_CLIP.CLIP
      ENS_PART_CLIP.CLIPLINEPT1
      ENS_PART_CLIP.CLIPLINEPT2
      ENS_PART_CLIP.CLIPPLANEPT1
      ENS_PART_CLIP.CLIPPLANEPT2
      ENS_PART_CLIP.CLIPPLANEPT3
      ENS_PART_CLIP.COLORBYPALETTE
      ENS_PART_CLIP.COLORBYRGB
      ENS_PART_CLIP.CONEANGLE
      ENS_PART_CLIP.CONEAXISVECT
      ENS_PART_CLIP.CONEENDPOINT
      ENS_PART_CLIP.CONEORIGIN
      ENS_PART_CLIP.CULLELEMENTS
      ENS_PART_CLIP.CYLDAXISVECT
      ENS_PART_CLIP.CYLDENDPOINT
      ENS_PART_CLIP.CYLDORIGIN
      ENS_PART_CLIP.CYLDRADIUS
      ENS_PART_CLIP.DESCRIPTION
      ENS_PART_CLIP.DIMENSION2
      ENS_PART_CLIP.DIMENSION2STEP
      ENS_PART_CLIP.DIMENSION3
      ENS_PART_CLIP.DIMENSION3STEP
      ENS_PART_CLIP.DISPLACEBY
      ENS_PART_CLIP.DISPLACEFACTOR
      ENS_PART_CLIP.DOMAIN
      ENS_PART_CLIP.DOMAINBOX
      ENS_PART_CLIP.DOMAINXYZRTZLINE
      ENS_PART_CLIP.DOUBLESIDED
      ENS_PART_CLIP.DTA_BLOCK
      ENS_PART_CLIP.EDIT_TARGET
      ENS_PART_CLIP.ELTBLANKING
      ENS_PART_CLIP.ELTDEFINEDBY
      ENS_PART_CLIP.ELTFEATUREANGLE
      ENS_PART_CLIP.ELTFILTER1ACTIVE
      ENS_PART_CLIP.ELTFILTER1TESTOP
      ENS_PART_CLIP.ELTFILTER1TESTVALUE
      ENS_PART_CLIP.ELTFILTER1TESTVARCOMP
      ENS_PART_CLIP.ELTFILTER1TESTVARIABLE
      ENS_PART_CLIP.ELTFILTER1VARCOMP
      ENS_PART_CLIP.ELTFILTER1VARIABLE
      ENS_PART_CLIP.ELTFILTER2ACTIVE
      ENS_PART_CLIP.ELTFILTER2LOGICALOP
      ENS_PART_CLIP.ELTFILTER2TESTOP
      ENS_PART_CLIP.ELTFILTER2TESTVALUE
      ENS_PART_CLIP.ELTFILTER2TESTVARCOMP
      ENS_PART_CLIP.ELTFILTER2TESTVARIABLE
      ENS_PART_CLIP.ELTFILTER2VARCOMP
      ENS_PART_CLIP.ELTFILTER2VARIABLE
      ENS_PART_CLIP.ELTFILTER3ACTIVE
      ENS_PART_CLIP.ELTFILTER3LOGICALOP
      ENS_PART_CLIP.ELTFILTER3TESTOP
      ENS_PART_CLIP.ELTFILTER3TESTVALUE
      ENS_PART_CLIP.ELTFILTER3TESTVARCOMP
      ENS_PART_CLIP.ELTFILTER3TESTVARIABLE
      ENS_PART_CLIP.ELTFILTER3VARCOMP
      ENS_PART_CLIP.ELTFILTER3VARIABLE
      ENS_PART_CLIP.ELTFILTER4ACTIVE
      ENS_PART_CLIP.ELTFILTER4LOGICALOP
      ENS_PART_CLIP.ELTFILTER4TESTOP
      ENS_PART_CLIP.ELTFILTER4TESTVALUE
      ENS_PART_CLIP.ELTFILTER4TESTVARCOMP
      ENS_PART_CLIP.ELTFILTER4TESTVARIABLE
      ENS_PART_CLIP.ELTFILTER4VARCOMP
      ENS_PART_CLIP.ELTFILTER4VARIABLE
      ENS_PART_CLIP.ELTFILTER5ACTIVE
      ENS_PART_CLIP.ELTFILTER5LOGICALOP
      ENS_PART_CLIP.ELTFILTER5TESTOP
      ENS_PART_CLIP.ELTFILTER5TESTVALUE
      ENS_PART_CLIP.ELTFILTER5TESTVARCOMP
      ENS_PART_CLIP.ELTFILTER5TESTVARIABLE
      ENS_PART_CLIP.ELTFILTER5VARCOMP
      ENS_PART_CLIP.ELTFILTER5VARIABLE
      ENS_PART_CLIP.ELTFILTER6ACTIVE
      ENS_PART_CLIP.ELTFILTER6LOGICALOP
      ENS_PART_CLIP.ELTFILTER6TESTOP
      ENS_PART_CLIP.ELTFILTER6TESTVALUE
      ENS_PART_CLIP.ELTFILTER6TESTVARCOMP
      ENS_PART_CLIP.ELTFILTER6TESTVARIABLE
      ENS_PART_CLIP.ELTFILTER6VARCOMP
      ENS_PART_CLIP.ELTFILTER6VARIABLE
      ENS_PART_CLIP.ELTREPPOINTSNORMALS
      ENS_PART_CLIP.ELTREPRESENTATION
      ENS_PART_CLIP.ELTSHRINKFACTOR
      ENS_PART_CLIP.ENDPOINT
      ENS_PART_CLIP.ENS_DETAILS
      ENS_PART_CLIP.ENS_KIND
      ENS_PART_CLIP.ENS_MATERIAL
      ENS_PART_CLIP.ENS_PARENT_PART
      ENS_PART_CLIP.ENS_PLIST_KEY_SEL_0
      ENS_PART_CLIP.ENS_PLIST_KEY_SEL_1
      ENS_PART_CLIP.ENS_PLIST_KEY_SEL_2
      ENS_PART_CLIP.ENS_PLIST_KEY_SEL_3
      ENS_PART_CLIP.ENS_PLIST_KEY_SEL_4
      ENS_PART_CLIP.ENS_PLIST_KEY_SEL_5
      ENS_PART_CLIP.ENS_PLIST_KEY_SEL_6
      ENS_PART_CLIP.ENS_PLIST_KEY_SEL_7
      ENS_PART_CLIP.ENS_PLIST_KEY_SEL_8
      ENS_PART_CLIP.ENS_PLIST_KEY_SEL_9
      ENS_PART_CLIP.ENS_SYMMETRY_AXIS
      ENS_PART_CLIP.ENS_SYMMETRY_COUNT
      ENS_PART_CLIP.ENS_TURBO_STAGE
      ENS_PART_CLIP.ENS_TURBO_VDIM
      ENS_PART_CLIP.ENS_TURBO_VIEW
      ENS_PART_CLIP.ENS_UNITS_LABEL
      ENS_PART_CLIP.ENTITYLABELELT
      ENS_PART_CLIP.ENTITYLABELNODE
      ENS_PART_CLIP.EQUATION
      ENS_PART_CLIP.EXTENTS
      ENS_PART_CLIP.FILLPATTERN
      ENS_PART_CLIP.GRIDPTS
      ENS_PART_CLIP.HANDLES_ENABLED
      ENS_PART_CLIP.HAS0DELEMENTS
      ENS_PART_CLIP.HAS1DELEMENTS
      ENS_PART_CLIP.HAS2DELEMENTS
      ENS_PART_CLIP.HAS3DELEMENTS
      ENS_PART_CLIP.HIDDENLINE
      ENS_PART_CLIP.HIDDENSURFACE
      ENS_PART_CLIP.IJKAXIS
      ENS_PART_CLIP.IJKAXISSCALE
      ENS_PART_CLIP.IJKSCALE
      ENS_PART_CLIP.ISGROUP
      ENS_PART_CLIP.LIGHTAMBIENT
      ENS_PART_CLIP.LIGHTDIFFUSE
      ENS_PART_CLIP.LIGHTEMISSIVE
      ENS_PART_CLIP.LIGHTREFRACTION
      ENS_PART_CLIP.LIGHTSPECULARINTENSITY
      ENS_PART_CLIP.LIGHTSPECULARREFLECTION
      ENS_PART_CLIP.LIGHTSPECULARSHINE
      ENS_PART_CLIP.LIGHTSPECULARTINT
      ENS_PART_CLIP.LINESTYLE
      ENS_PART_CLIP.LINEWIDTH
      ENS_PART_CLIP.LPARTPARENT
      ENS_PART_CLIP.MATERIALBASETYPE
      ENS_PART_CLIP.MATERIALDESCRIPTION
      ENS_PART_CLIP.MESHPLANE
      ENS_PART_CLIP.MESHPLANEIJK
      ENS_PART_CLIP.MESHPLANERTZ
      ENS_PART_CLIP.MESHPLANEXYZ
      ENS_PART_CLIP.MESHTYPE
      ENS_PART_CLIP.METADATA
      ENS_PART_CLIP.MIRRORORIGINAL
      ENS_PART_CLIP.NODEDETAIL
      ENS_PART_CLIP.NODERANGESTEPI
      ENS_PART_CLIP.NODERANGESTEPJ
      ENS_PART_CLIP.NODERANGESTEPK
      ENS_PART_CLIP.NODESCALE
      ENS_PART_CLIP.NODESIZEBY
      ENS_PART_CLIP.NODETYPE
      ENS_PART_CLIP.NODEVARIABLE
      ENS_PART_CLIP.OPAQUENESS
      ENS_PART_CLIP.ORIGIN
      ENS_PART_CLIP.PARENT
      ENS_PART_CLIP.PARTNUMBER
      ENS_PART_CLIP.PARTNUMELE
      ENS_PART_CLIP.PARTNUMELECLIENT
      ENS_PART_CLIP.PARTTYPE
      ENS_PART_CLIP.PARTTYPEENUM
      ENS_PART_CLIP.PATHNAME
      ENS_PART_CLIP.PERIODICSECTIONS
      ENS_PART_CLIP.PREDEFINEDMATERIAL
      ENS_PART_CLIP.PROJECT_MASK
      ENS_PART_CLIP.RADIUS
      ENS_PART_CLIP.REDUCEPOLYGONS
      ENS_PART_CLIP.REDUCEPOLYGONSFACTOR
      ENS_PART_CLIP.REFFRAME
      ENS_PART_CLIP.RENDERINGREFLECTIONID
      ENS_PART_CLIP.REV1DAXISVECT
      ENS_PART_CLIP.REV1DORIGIN
      ENS_PART_CLIP.REVERSENORMAL
      ENS_PART_CLIP.REVOLVEPART
      ENS_PART_CLIP.REVPOINTDISTANCE1
      ENS_PART_CLIP.REVPOINTDISTANCE10
      ENS_PART_CLIP.REVPOINTDISTANCE2
      ENS_PART_CLIP.REVPOINTDISTANCE3
      ENS_PART_CLIP.REVPOINTDISTANCE4
      ENS_PART_CLIP.REVPOINTDISTANCE5
      ENS_PART_CLIP.REVPOINTDISTANCE6
      ENS_PART_CLIP.REVPOINTDISTANCE7
      ENS_PART_CLIP.REVPOINTDISTANCE8
      ENS_PART_CLIP.REVPOINTDISTANCE9
      ENS_PART_CLIP.REVPOINTRADII1
      ENS_PART_CLIP.REVPOINTRADII10
      ENS_PART_CLIP.REVPOINTRADII2
      ENS_PART_CLIP.REVPOINTRADII3
      ENS_PART_CLIP.REVPOINTRADII4
      ENS_PART_CLIP.REVPOINTRADII5
      ENS_PART_CLIP.REVPOINTRADII6
      ENS_PART_CLIP.REVPOINTRADII7
      ENS_PART_CLIP.REVPOINTRADII8
      ENS_PART_CLIP.REVPOINTRADII9
      ENS_PART_CLIP.REVTOOLAXIS
      ENS_PART_CLIP.REVTOOLNUMPTS
      ENS_PART_CLIP.REVTOOLORIGIN
      ENS_PART_CLIP.RTZAXIS
      ENS_PART_CLIP.SAMPLEPOINTSLINE
      ENS_PART_CLIP.SAMPLEPOINTSSPLINE
      ENS_PART_CLIP.SAMPLETYPE
      ENS_PART_CLIP.SAMPLEXYZ
      ENS_PART_CLIP.SELECTED
      ENS_PART_CLIP.SHADING
      ENS_PART_CLIP.SHOWSFT
      ENS_PART_CLIP.SLIDERRANGEIJK
      ENS_PART_CLIP.SLIDERSTEP
      ENS_PART_CLIP.SLIDERSTEPIJK
      ENS_PART_CLIP.SLIDERX
      ENS_PART_CLIP.SLIDERY
      ENS_PART_CLIP.SLIDERZ
      ENS_PART_CLIP.SOURCES
      ENS_PART_CLIP.SPECIFYSYMMETRYORIGIN
      ENS_PART_CLIP.SPHRAXISENDPOINT1
      ENS_PART_CLIP.SPHRAXISENDPOINT2
      ENS_PART_CLIP.SPHRAXISVECT
      ENS_PART_CLIP.SPHRORIGIN
      ENS_PART_CLIP.SPHRRADIUS
      ENS_PART_CLIP.SPLINEID
      ENS_PART_CLIP.SYMMETRYANGLE
      ENS_PART_CLIP.SYMMETRYAXIS
      ENS_PART_CLIP.SYMMETRYDELTA
      ENS_PART_CLIP.SYMMETRYMIRRORX
      ENS_PART_CLIP.SYMMETRYMIRRORXY
      ENS_PART_CLIP.SYMMETRYMIRRORXYZ
      ENS_PART_CLIP.SYMMETRYMIRRORXZ
      ENS_PART_CLIP.SYMMETRYMIRRORY
      ENS_PART_CLIP.SYMMETRYMIRRORYZ
      ENS_PART_CLIP.SYMMETRYMIRRORZ
      ENS_PART_CLIP.SYMMETRYORIGIN
      ENS_PART_CLIP.SYMMETRYRINSTANCES
      ENS_PART_CLIP.SYMMETRYTYPE
      ENS_PART_CLIP.TEXTURECOORDTYPE
      ENS_PART_CLIP.TEXTUREINTERPOLATION
      ENS_PART_CLIP.TEXTUREMODE
      ENS_PART_CLIP.TEXTUREOBJECT
      ENS_PART_CLIP.TEXTUREORIGIN
      ENS_PART_CLIP.TEXTUREORIGINNODEID
      ENS_PART_CLIP.TEXTUREORIGINUSE
      ENS_PART_CLIP.TEXTUREREPEATMODE
      ENS_PART_CLIP.TEXTURESORIGINNODEID
      ENS_PART_CLIP.TEXTURESVARIABLE
      ENS_PART_CLIP.TEXTURESVECTOR
      ENS_PART_CLIP.TEXTURETORIGINNODEID
      ENS_PART_CLIP.TEXTURETVARIABLE
      ENS_PART_CLIP.TEXTURETVECTOR
      ENS_PART_CLIP.TOOL
      ENS_PART_CLIP.TYPE
      ENS_PART_CLIP.UUID
      ENS_PART_CLIP.VALUE
      ENS_PART_CLIP.VALUEIJK
      ENS_PART_CLIP.VALUERTZ
      ENS_PART_CLIP.VALUESPLINE
      ENS_PART_CLIP.VALUEXYZ
      ENS_PART_CLIP.VIEWPORTVIS
      ENS_PART_CLIP.VISIBILITYELT
      ENS_PART_CLIP.VISIBILITYLINE
      ENS_PART_CLIP.VISIBILITYNODE
      ENS_PART_CLIP.VISIBLE
      ENS_PART_CLIP.VOLUMEQUALITY
      ENS_PART_CLIP.VOLUMERENDERINGTYPE
      ENS_PART_CLIP.__OBJID__
      ENS_PART_CLIP.objid
   
   